<resources>
    <string name="app_name">Oui</string>
    <string name="app_desc">welcome</string>
    <string name="btnLogin">Login</string>
    <string name="login">Already have an account? Login</string>
    <string name="email"> Enter Email </string>
    <string name="password">Enter password</string>
    <string name="btnSignup">Sign up</string>
    <string name="signup">Dont have an account? sign up</string>
    <string name="fname_input">Enter Name </string>
    <string name="sname_input">Surname</string>
    <string name="btn_logout">Logout</string>
    <string name="contact_number">Contact Number</string>
    <string name="scanbtn">Press to scan</string>

    <item name="visible" type="id" />
    <item name="masked" type="id" />
    <string name="title_activity_profile">profile</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
</resources>
